# state-machines-rs

./: Cargo.toml  LICENSE  README.md  TODO.md
benches/: compositions.rs  throughput.rs
examples/: accumulator_variants.rs  biquad_filter.rs  bollinger_breakout.rs  circuit_breaker.rs  counter.rs  debouncer.rs  factorial.rs  fibonacci.rs  game_ai.rs  hello_world_tsm.rs  json_lexer.rs  kalman_filter.rs  language_acceptor.rs  ma_crossover.rs  one_pole_filters.rs  parking_gate.rs  pid_controller.rs  schmitt_trigger.rs  sir_epidemic.rs  tcp_state_machine.rs  text_markov.rs  token_bucket.rs  wall_follower.rs  weather_markov.rs
src/: core.rs  defined.rs  ext.rs  lib.rs  rng.rs
src/combinators/: cascade.rs  conditional.rs  feedback.rs  mod.rs  parallel.rs
src/primitives/: abc.rs  accumulator.rs  adder.rs  average2.rs  delay.rs  dfa.rs  gain.rs  increment.rs  markov_chain.rs  mod.rs  moving_average_n.rs  multiplier.rs  negation.rs  parking_gate.rs  ring_buffer.rs  select.rs  std_dev_last_n.rs  sum_last3.rs  sum_last_n.rs  table_fsm.rs  updown.rs  variance_last_n.rs  wire.rs
src/tsm/: char_tsm.rs  consume_five.rs  mod.rs  repeat.rs  sequence.rs  until.rs
tests/: chapter_traces.rs  markov_chain.rs  rolling_stats.rs  table_fsm.rs
