[package]
name = "state-machines-rs"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "compositions"
harness = false

[profile.bench]
lto = "thin"
codegen-units = 1
